Allow vhost ssl cert andn key inheritance from http section
Without this patch the SSL cert and key are always configured within vhost
server blocks.  This is a problem when using a single wildcard certificate
operating with multiple virtual host entries because the configuration results
in increased memory consumption according to the NGINX documentation:

> It is better to place a certificate file with several names and its private key
> file at the http level of configuration to inherit their single memory copy in
> all servers.

This patch addresses the problem by making it possible to pass the boolean value
`false` to the ssl_key and ssl_cert parameters.  When doing so, the SSL key and
certificate will be inherited from the http section of the configuration.

References:

 * http://nginx.org/en/docs/http/configuring_https_servers.html#name_based_https_servers

--- a/templates/vhost/vhost_ssl_settings.erb
+++ b/templates/vhost/vhost_ssl_settings.erb
@@ -1,7 +1,11 @@
   ssl on;
 
+<% if @ssl_cert -%>
   ssl_certificate           <%= @ssl_cert %>;
+<% end -%>
+<% if @ssl_key -%>
   ssl_certificate_key       <%= @ssl_key %>;
+<% end -%>
 <% if defined? @ssl_client_cert -%>
   ssl_client_certificate    <%= @ssl_client_cert %>;
   ssl_verify_client         <%= @ssl_verify_client %>;
