Allow setting $daemon to "on" or "off" (defaults to unset); should improve usability for Docker

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,4 +1,7 @@
 # MANAGED BY PUPPET
+<% if @daemon -%>
+daemon <%= @daemon %>;
+<% end -%>
 <% if @super_user -%>
 user <%= @daemon_user %>;
 <% end -%>
