Rename rewrite_to_https => ssl_force_redirect (breaking / backwards-incompatible change), take out needless "if" statement before return. Also forces integer for $ssl_port and $listen_port, which previously only generated a warning.

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -134,12 +134,10 @@ server {
 <% if @maintenance -%>
   <%= @maintenance_value %>;
 <% end -%>
-<% if @rewrite_to_https -%>
-  if ($ssl_protocol = "") {
-       return 301 https://$host<% if @ssl_port.to_i != 443 %>:<%= @ssl_port %><% end %>$request_uri;
-  }
+<% if @ssl_redirect -%>
+  return 301 https://$host<% if @_ssl_redirect_port.to_i != 443 %>:<%= @_ssl_redirect_port %><% end %>$request_uri;
 <% end -%>
-<% if @index_files.count > 0 -%>
+<% if @index_files.count > 0 and not @ssl_only -%>
   index <% Array(@index_files).each do |i| %> <%= i %><% end %>;
 
 <% end -%>
