--- a/templates/upstream/upstream_footer.erb
+++ b/templates/upstream/upstream_footer.erb
@@ -1,12 +1,21 @@
-<% if @upstream_cfg_append -%><% @upstream_cfg_append.sort_by{|k,v| k}.each do |key,value| %>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subvalue).each do |asubvalue| -%>
+<% if @upstream_cfg_append %>
+<%# Slightly less obtuse way to sort but put keepalive at end -%>
+<%
+  @upstream_cfg_append = Hash[@upstream_cfg_append.sort]
+  @upstream_cfg_append['keepalive'] = @upstream_cfg_append.delete('keepalive')
+-%>
+  <%- @upstream_cfg_append.each do |key,value| -%>
+    <%- if value.is_a?(Hash) -%>
+      <%- value.each do |subkey,subvalue| -%>
+        <%- Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= subkey %> <%= asubvalue %>;
-<% end -%>
-<% end -%><% else -%>
-<% Array(value).each do |asubvalue| -%>
+        <%- end -%>
+      <%- end -%>
+    <%- else -%>
+      <%- Array(value).each do |asubvalue| -%>
   <%= key %> <%= asubvalue %>;
+      <%- end -%>
+    <%- end -%>
+  <%- end -%>
 <% end -%>
-<% end -%>
-<% end -%><% end -%>
 }
