--- a/templates/upstream/upstream_header.erb
+++ b/templates/upstream/upstream_header.erb
@@ -1,13 +1,22 @@
 # MANAGED BY PUPPET
 upstream <%= @name %> {
-<% if @upstream_cfg_prepend -%><% @upstream_cfg_prepend.sort_by{|k,v| k}.each do |key,value| %>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subvalue).each do |asubvalue| -%>
+<% if @upstream_cfg_prepend -%>
+<%# Slightly less obtuse way to sort but put keepalive at end -%>
+<%
+  @upstream_cfg_prepend = Hash[@upstream_cfg_prepend.sort]
+  @upstream_cfg_prepend['keepalive'] = @upstream_cfg_prepend.delete('keepalive')
+-%>
+  <%- @upstream_cfg_prepend.each do |key,value| -%>
+    <%- if value.is_a?(Hash) -%>
+      <%- value.each do |subkey,subvalue| -%>
+        <%- Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= subkey %> <%= asubvalue %>;
-<% end -%>
-<% end -%><% else -%>
-<% Array(value).each do |asubvalue| -%>
+        <%- end -%>
+      <%- end -%>
+    <%- else -%>
+      <%- Array(value).each do |asubvalue| -%>
   <%= key %> <%= asubvalue %>;
+      <%- end -%>
+    <%- end -%>
+  <%- end -%>
 <% end -%>
-<% end -%>
-<% end -%><% end -%>
