fix map.erb to work on Redhat 6 releases

--- a/templates/conf.d/map.erb
+++ b/templates/conf.d/map.erb
@@ -14,7 +14,7 @@ map <%= @string %> $<%= @name %> {
   <%- end -%>
 <% end -%>
 <% if @mappings.is_a?(Array) -%>
-  <%- field_width = @mappings.inject(0) { |l,(h)| h['key'].size > l ? h['key'].size : l } -%>
+  <%- field_width = @mappings.inject(0) { |l,h| h['key'].size > l ? h['key'].size : l } -%>
   <%- @mappings.each do |h| -%>
   <%= sprintf("%-*s", field_width, h['key']) %> <%= h['value'] %>;
   <%- end -%>
