--- a/templates/mailhost/mailhost_ssl.erb
+++ b/templates/mailhost/mailhost_ssl.erb
@@ -1,36 +1,62 @@
 # MANAGED BY PUPPET
 server {
+<% if @mailhost_cfg_prepend -%>
+  <%- @mailhost_cfg_prepend.sort_by{ |k,v| k}.each do |key,value| -%>
+    <%- if value.is_a?(Hash) -%>
+      <%- value.sort_by {|k,v| k}.each do |subkey,subvalue| -%>
+        <%- Array(subvalue).each do |asubvalue| -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
+        <%- end -%>
+      <%- end -%>
+    <%- else -%>
+      <%- Array(value).each do |asubvalue| -%>
+  <%= key %> <%= asubvalue %>;
+      <%- end -%>
+    <%- end -%>
+  <%- end -%>
+<% end -%>
+<% Array(@raw_prepend).each do |line| -%>
+  <%= line %>
+<% end -%>
 <%- if @listen_ip.is_a?(Array) then -%>
   <%- @listen_ip.each do |ip| -%>
   listen       <%= ip %>:<%= @ssl_port %>;
   <%- end -%>
 <%- else -%>
-  listen       <%= @listen_ip %>:<%= @ssl_port %>;
+  listen                <%= @listen_ip %>:<%= @ssl_port %>;
 <%- end -%>
 <%# check to see if ipv6 support exists in the kernel before applying -%>
 <%- if @ipv6_enable && (defined? @ipaddress6) -%>
   <%- if @ipv6_listen_ip.is_a?(Array) then -%>
     <%- @ipv6_listen_ip.each do |ipv6| -%>
-  listen [<%= ipv6 %>]:<%= @ssl_port %><% if @ipv6_listen_options %> <%= @ipv6_listen_options %><% end %>;
+  listen                [<%= ipv6 %>]:<%= @ssl_port %><% if @ipv6_listen_options %> <%= @ipv6_listen_options %><% end %>;
     <%- end -%>
   <%- else -%>
-  listen [<%= @ipv6_listen_ip %>]:<%= @ssl_port %><% if @ipv6_listen_options %> <%= @ipv6_listen_options %><% end %>;
+  listen                [<%= @ipv6_listen_ip %>]:<%= @ssl_port %><% if @ipv6_listen_options %> <%= @ipv6_listen_options %><% end %>;
   <%- end -%>
 <%- end -%>
-  server_name           <%= @server_name.join(" ") %>;
-  protocol              <%= @protocol %>;
-  xclient               <%= @xclient %>;
-  auth_http             <%= @auth_http %>;
-  <%- if @auth_http_header -%>
-  auth_http_header      <%= @auth_http_header %>;
+<%= scope.function_template(["nginx/mailhost/mailhost_common.erb"]) -%>
+
+  ssl                   on;
+  starttls              off;
+
+<%= scope.function_template(["nginx/mailhost/mailhost_ssl_settings.erb"]) -%>
+<% if @mailhost_cfg_append -%>
+  <%- @mailhost_cfg_append.sort_by{ |k,v| k}.each do |key,value| -%>
+    <%- if value.is_a?(Hash) -%>
+      <%- value.sort_by {|k,v| k}.each do |subkey,subvalue| -%>
+        <%- Array(subvalue).each do |asubvalue| -%>
+  <%= key %> <%= subkey %> <%= asubvalue %>;
+        <%- end -%>
+      <%- end -%>
+    <%- else -%>
+      <%- Array(value).each do |asubvalue| -%>
+  <%= key %> <%= asubvalue %>;
+      <%- end -%>
+    <%- end -%>
   <%- end -%>
-
-  ssl on;
-  ssl_certificate      <%= @ssl_cert %>;
-  ssl_certificate_key  <%= @ssl_key %>;
-  ssl_session_timeout  5m;
-
-  ssl_protocols <%= @ssl_protocols %>;
-  ssl_ciphers <%= @ssl_ciphers %>;
-  ssl_prefer_server_ciphers   on;
+<% end -%>
+<% Array(@raw_append).each do |line| -%>
+  <%= line %>
+<% end -%>
 }
