--- a/templates/vhost/locations/alias.erb
+++ b/templates/vhost/locations/alias.erb
@@ -2,3 +2,9 @@
 <% if defined? @autoindex -%>
     autoindex <%= @autoindex %>;
 <% end -%>
+<% if @index_files and @index_files.count > 0 -%>
+    index    <% Array(@index_files).each do |i| %> <%= i %><% end %>;
+<% end -%>
+<% if @try_files -%>
+    try_files<% @try_files.each do |try| -%> <%= try %><% end -%>;
+<% end -%>
