Reorganize templates for clearer understanding
Without this change, the structure of the templates for locations are
bit rigid and hard to understand.  Each component of a location uses an
isolated template which means that much of the common logic is hard
coded to a particular location style, the deployment of which is chosen
based on a somewhat arbitrary idea of what it means to be a location,
and in some cases, the module gets it wrong.  In cases where there is
seeming correctness, modifications to a particular selection of logic
are duplicated among the nested templates.

This work is the results of what was necessary for me to understand what
the templates were doing, and to deploy a fastcgi PHP application.  As
such, the templates have been centralized and conditions about their
functionality have been moved into the template to determine if
rendering needs to be taken.  This allows a more complete, and leaves
potential for more complex examples easier to understand and reason
about.

Also here is the addition of a new param fastcgi_index on the location
class.

This work should result in on-disk configurations that are functionally
equivalent to what was in place before, except in places where the
module was masking conflicting options that were not being rendered in
the templates.

--- a/templates/vhost/locations/fastcgi.erb
+++ b/templates/vhost/locations/fastcgi.erb
@@ -1,14 +1,15 @@
+<% if @fastcgi -%>
 <% if defined? @www_root -%>
     root          <%= @www_root %>;
 <% end -%>
     include       <%= @fastcgi_params %>;
 
     fastcgi_pass  <%= @fastcgi %>;
+<% if @fastcgi_index -%>
+    fastcgi_index <%= @fastcgi_index %>;
+<% end -%>
 <% if @fastcgi_split_path -%>
     fastcgi_split_path_info <%= @fastcgi_split_path %>;
-<% end -%>
-<% if @try_files -%>
-    try_files    <% @try_files.each do |try| -%> <%= try %><% end -%>;
 <% end -%>
 <% if defined? @fastcgi_script -%>
     <%-# this setting can be overridden by setting it in the fastcgi_param hash too %>
@@ -19,4 +20,5 @@
 	<%- @fastcgi_param.sort_by {|k,v| k}.each do |key, val| -%>
     fastcgi_param <%= sprintf("%-*s", field_width, key) %> <%= val %>;
 	<%- end -%>
+<% end -%>
 <% end -%>
