--- a/templates/vhost/locations/alias.erb
+++ b/templates/vhost/locations/alias.erb
@@ -1,10 +1,3 @@
+<% if @location_alias -%>
     alias <%= @location_alias %>;
-<% if defined? @autoindex -%>
-    autoindex <%= @autoindex %>;
-<% end -%>
-<% if @index_files and @index_files.count > 0 -%>
-    index    <% Array(@index_files).each do |i| %> <%= i %><% end %>;
-<% end -%>
-<% if @try_files -%>
-    try_files<% @try_files.each do |try| -%> <%= try %><% end -%>;
 <% end -%>
