--- a/templates/server/location_header.erb
+++ b/templates/server/location_header.erb
@@ -31,6 +31,9 @@
 <%- if @auth_basic_user_file -%>
     auth_basic_user_file <%= @auth_basic_user_file %>;
 <% end -%>
+<%- if defined? @auth_request -%>
+  auth_request <%= @auth_request %>;
+  <%- end -%>
 <% if @location_custom_cfg_prepend -%>
   <%- @location_custom_cfg_prepend.each do |key,value| -%>
     <%- if value.is_a?(Hash) -%>
