--- a/templates/server/server_ssl_header.erb
+++ b/templates/server/server_ssl_header.erb
@@ -63,6 +63,9 @@ server {
   auth_basic_user_file      "<%= @auth_basic_user_file %>";
   <% end -%>
 <%- end -%>
+<%- if defined? @auth_request -%>
+  auth_request <%= @auth_request %>;
+<%- end -%>
 <%- if instance_variables.any? { |iv| iv.to_s.include? 'client_' } -%>
   <%- if defined? @client_body_timeout -%>
   client_body_timeout <%= @client_body_timeout %>;
