--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -131,7 +131,7 @@ server {
 <% end -%>
 <% if @add_header -%>
   <%- @add_header.keys.sort.each do |key| -%>
-  add_header              '<%= key %>' '<%= @add_header[key] %>';
+  add_header              "<%= key %>" "<%= @add_header[key] %>";
   <%- end -%>
 <% end -%>
 <% if @maintenance -%>
