--- a/templates/server/server_ssl_header.erb
+++ b/templates/server/server_ssl_header.erb
@@ -161,6 +161,6 @@ server {
 <% end -%>
 <% if @add_header -%>
   <%- @add_header.keys.sort.each do |key| -%>
-  add_header              '<%= key %>' '<%= @add_header[key] %>';
+  add_header              "<%= key %>" "<%= @add_header[key] %>";
   <%- end -%>
 <% end -%>
