Added support for proxy_next_upstream directive.

--- a/templates/vhost/locations/proxy.erb
+++ b/templates/vhost/locations/proxy.erb
@@ -27,3 +27,6 @@
 <% if @proxy_cache_key -%>
     proxy_cache_key         <%= @proxy_cache_key %>;
 <% end -%>
+<% if @proxy_next_upstream-%>
+    proxy_next_upstream     <%= @proxy_next_upstream %>;
+<% end -%>
