--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -19,6 +19,7 @@ server {
     <%- end -%>
   <%- end -%>
 <%# check to see if ipv6 support exists in the kernel before applying -%>
+<%# FIXME this logic is duplicated all over the place -%>
   <%- if @ipv6_enable && (defined? @ipaddress6) -%>
     <%- if @ipv6_listen_ip.is_a?(Array) then -%>
       <%- @ipv6_listen_ip.each do |ipv6| -%>
