Add access_by_lua_file server directive.
This lets you control access to an nginx server using lua

--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -150,6 +150,9 @@ server {
 <% if defined? @log_by_lua_file -%>
   log_by_lua_file "<%= @log_by_lua_file %>";
 <% end -%>
+<% if defined? @access_by_lua_file -%>
+  access_by_lua_file "<%= @access_by_lua_file %>";
+<% end -%>
 <% if @access_log.is_a?(Array) -%>
   <%- @access_log.each do |log_item| -%>
   access_log            <%= log_item %> <%= @format_log %>;
