Make ssl_prefer_server_ciphers configurable in server / mailhost resources (#1032). Default to 'on', vs. the nginx default of 'off'

--- a/templates/server/server_ssl_settings.erb
+++ b/templates/server/server_ssl_settings.erb
@@ -26,7 +26,7 @@
 <% end -%>
   ssl_protocols             <%= @ssl_protocols %>;
   ssl_ciphers               <%= @ssl_ciphers %>;
-  ssl_prefer_server_ciphers on;
+  ssl_prefer_server_ciphers <%= @ssl_prefer_server_ciphers %>;
 <% if @ssl_crl -%>
   ssl_crl                   <%= @ssl_crl %>;
 <% end -%>
