(#862) Use vendor defaults for fastcgi / uwsgi params. Rename fastcgi_params to fastcgi.conf. Don't manage files if set to non-default path.

--- a/templates/server/locations/fastcgi.erb
+++ b/templates/server/locations/fastcgi.erb
@@ -2,7 +2,9 @@
 <% if defined? @www_root -%>
     root          <%= @www_root %>;
 <% end -%>
+<% if defined? @fastcgi_params -%>
     include       <%= @fastcgi_params %>;
+<% end -%>
 
     fastcgi_pass  <%= @fastcgi %>;
 <% if @fastcgi_index -%>
