--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -1,5 +1,5 @@
 # MANAGED BY PUPPET
-<% if @rewrite_www_to_non_www -%>
+<% if @rewrite_www_to_non_www or @rewrite_non_www_to_www -%>
 <%- @server_name.each do |s| -%>
 server {
   <%- if @listen_ip.is_a?(Array) then -%>
@@ -19,11 +19,20 @@ server {
     <%- end -%>
   <%- end -%>
 <%= scope.function_template(["nginx/server/server_ipv6_listen.erb"]) %>
+  <%- if @rewrite_www_to_non_www  -%>
   server_name  www.<%= s.gsub(/^www\./, '') %>;
-  <%- if @ssl_redirect or @ssl_only -%>
+    <%- if @ssl_redirect or @ssl_only -%>
   return       301 https://<%= s.gsub(/^www\./, '') %><% if @_ssl_redirect_port.to_i != 443 %>:<%= @_ssl_redirect_port %><% end %>$request_uri;
-  <%- else -%>
+    <%- else -%>
   return       301 http://<%= s.gsub(/^www\./, '') %>$request_uri;
+    <%- end -%>
+  <%- elsif @rewrite_non_www_to_www  -%>
+  server_name  <%= s.gsub(/(www\.)*/, '') %>;
+    <%- if @ssl_redirect or @ssl_only -%>
+  return       301 https://<%= s.gsub(/^(?!www\.)/, 'www.') %><% if @_ssl_redirect_port.to_i != 443 %>:<%= @_ssl_redirect_port %><% end %>$request_uri;
+    <%- else -%>
+  return       301 http://<%= s.gsub(/^(?!www\.)/, 'www.') %>$request_uri;
+    <%- end -%>
   <%- end -%>
 }
 
@@ -48,6 +57,13 @@ server {
 <%- end -%>
 <%= scope.function_template(["nginx/server/server_ipv6_listen.erb"]) %>
   server_name           <%= @rewrite_www_to_non_www ? @server_name.join("  ").gsub(/(^| )(www\.)?(?=[a-z0-9])/, '') : @server_name.join(" ") %>;
+  <%- if @rewrite_www_to_non_www -%>
+  server_name           <%= @server_name.join("  ").gsub(/(^| )(www\.)?(?=[a-z0-9])/, '') %>;
+  <%- elsif @rewrite_non_www_to_www -%>
+  server_name           <%= @server_name.join("  ").gsub(/(^| )(?!www\.)+(?=[a-z0-9])/, '\1www.') %>;
+  <%- else -%>
+  server_name           <%= @server_name.join(" ") %>;
+  <%- end -%>
 <%- if instance_variables.any? { |iv| iv.to_s.include? 'auth_basic' } -%>
   <%- if defined? @auth_basic -%>
   auth_basic           "<%= @auth_basic %>";
