--- a/templates/server/server_ssl_header.erb
+++ b/templates/server/server_ssl_header.erb
@@ -60,7 +60,7 @@ server {
   <% if defined? @auth_basic -%>
   auth_basic                "<%= @auth_basic %>";
   <% end -%>
-  <% if defined? @auth_basic_user_file -%>
+  <%- if defined? @auth_basic_user_file -%>
   auth_basic_user_file      "<%= @auth_basic_user_file %>";
   <% end -%>
 <%- end -%>
