--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -18,17 +18,7 @@ server {
   listen unix:<%= @listen_unix_socket %><% if @listen_unix_socket_options %> <%= @listen_unix_socket_options %><% end %>;
     <%- end -%>
   <%- end -%>
-<%# check to see if ipv6 support exists in the kernel before applying -%>
-<%# FIXME this logic is duplicated all over the place -%>
-  <%- if @ipv6_enable && (defined? @ipaddress6) -%>
-    <%- if @ipv6_listen_ip.is_a?(Array) then -%>
-      <%- @ipv6_listen_ip.each do |ipv6| -%>
-  listen [<%= ipv6 %>]:<%= @ipv6_listen_port %> <% if @ipv6_listen_options %><%= @ipv6_listen_options %><% end %>;
-      <%- end -%>
-    <%- else -%>
-  listen [<%= @ipv6_listen_ip %>]:<%= @ipv6_listen_port %> <% if @ipv6_listen_options %><%= @ipv6_listen_options %><% end %>;
-    <%- end -%>
-  <%- end -%>
+<%= scope.function_template(["nginx/server/server_ipv6_listen.erb"]) %>
   server_name  www.<%= s.gsub(/^www\./, '') %>;
   <%- if @ssl_redirect or @ssl_only -%>
   return       301 https://<%= s.gsub(/^www\./, '') %><% if @_ssl_redirect_port.to_i != 443 %>:<%= @_ssl_redirect_port %><% end %>$request_uri;
@@ -56,16 +46,7 @@ server {
   listen unix:<%= @listen_unix_socket %><% if @listen_unix_socket_options %> <%= @listen_unix_socket_options %><% end %>;
   <%- end -%>
 <%- end -%>
-<%# check to see if ipv6 support exists in the kernel before applying -%>
-<%- if @ipv6_enable && (defined? @ipaddress6) -%>
-  <%- if @ipv6_listen_ip.is_a?(Array) then -%>
-    <%- @ipv6_listen_ip.each do |ipv6| -%>
-  listen [<%= ipv6 %>]:<%= @ipv6_listen_port %> <% if @ipv6_listen_options %><%= @ipv6_listen_options %><% end %>;
-    <%- end -%>
-  <%- else -%>
-  listen [<%= @ipv6_listen_ip %>]:<%= @ipv6_listen_port %> <% if @ipv6_listen_options %><%= @ipv6_listen_options %><% end %>;
-  <%- end -%>
-<%- end -%>
+<%= scope.function_template(["nginx/server/server_ipv6_listen.erb"]) %>
   server_name           <%= @rewrite_www_to_non_www ? @server_name.join("  ").gsub(/(^| )(www\.)?(?=[a-z0-9])/, '') : @server_name.join(" ") %>;
 <%- if instance_variables.any? { |iv| iv.to_s.include? 'auth_basic' } -%>
   <%- if defined? @auth_basic -%>
