--- a/templates/conf.d/map.erb
+++ b/templates/conf.d/map.erb
@@ -6,6 +6,11 @@ map <%= @string %> $<%= @name %> {
 <% if @default -%>
   default <%= @default %>;
 <% end -%>
+<% if @includes.is_a?(Array) -%>
+  <%- @includes.each do |h| -%>
+  include <%= h %>;
+  <%- end -%>
+<% end -%>
 
 <% if @mappings.is_a?(Hash) -%>
   <%- field_width = @mappings.inject(0) { |l,(k,v)| k.size > l ? k.size : l } -%>
