enhance logging support per location: adding access_log & log_not_found directives

--- a/templates/server/location_header.erb
+++ b/templates/server/location_header.erb
@@ -74,3 +74,9 @@
     rewrite <%= rewrite_rule %>;
     <%- end -%>
 <% end -%>
+<% if @log_not_found -%>
+    log_not_found <%= @log_not_found %>;
+<% end -%>
+<% if @access_log -%>
+    access_log <%= @access_log %>;
+<% end -%>
