change param name includes to include_files to keep naming consistent with the other manifests adding test to ensure empty value , single and multiple inclusions works correctly

--- a/templates/conf.d/map.erb
+++ b/templates/conf.d/map.erb
@@ -6,7 +6,7 @@ map <%= @string %> $<%= @name %> {
 <% if @default -%>
   default <%= @default %>;
 <% end -%>
-<%- @includes.each do |h| -%>
+<%- @include_files.each do |h| -%>
   include <%= h %>;
 <%- end -%>
 
