fixing access_log, adding error_log and adding tests

--- a/templates/server/location_header.erb
+++ b/templates/server/location_header.erb
@@ -80,3 +80,6 @@
 <% if @access_log -%>
     access_log <%= @access_log %>;
 <% end -%>
+<% if @error_log -%>
+    error_log <%= @error_log %>;
+<% end -%>
