access_log: adding format_log to stay consistent with server declaration: when using it just disable logging, error_log: adding error_level to be able to set a different error level per location if needed); passing off disable the error_log

--- a/templates/server/location_header.erb
+++ b/templates/server/location_header.erb
@@ -78,8 +78,16 @@
     log_not_found <%= @log_not_found %>;
 <% end -%>
 <% if @access_log -%>
-    access_log <%= @access_log %>;
+    <% if @access_log == 'off' -%>
+    access_log off;
+    <% else -%>
+    access_log <%= @access_log %> <%= @format_log %>;
+    <% end -%>
 <% end -%>
 <% if @error_log -%>
-    error_log <%= @error_log %>;
+    <% if @error_log == 'off' -%>
+    error_log off;
+    <% else -%>
+    error_log <%= @error_log %> <%= @error_level %>;
+    <% end -%>
 <% end -%>
