Fixed include_files usage both without mappings

--- a/templates/conf.d/map/header.erb
+++ b/templates/conf.d/map/header.erb
@@ -6,3 +6,6 @@ map <%= @string %> $<%= @name %> {
 <% if @default -%>
   default <%= @default %>;
 <% end -%>
+<%- @include_files.each do |h| -%>
+  include <%= h %>;
+<%- end -%>
