dont deploy "ssl on" on nginx 1.15 or newer
fixes #1224. the option 'ssl on' within a server block is deprecated since nginx 1.15.0.

--- a/templates/server/server_ssl_settings.erb
+++ b/templates/server/server_ssl_settings.erb
@@ -1,5 +1,6 @@
+<% if @add_listen_directive -%>
   ssl on;
-
+<% end -%>
 <% if @ssl_cert -%>
   ssl_certificate           <%= @ssl_cert %>;
 <% end -%>
