add absolute_redirect support

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -74,6 +74,9 @@ http {
 <% end -%>
 <% end -%>
 
+<% if @absolute_redirect -%>
+  absolute_redirect <%= @absolute_redirect %>;
+<% end -%>
 <% if @http_access_log.is_a?(Array) -%>
   <%- @http_access_log.each do |log_item| -%>
   access_log  <%= log_item %><% if @http_format_log %> <%= @http_format_log%><% end %>;
