--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -138,6 +138,9 @@ server {
 <% if defined? @log_by_lua_file -%>
   log_by_lua_file "<%= @log_by_lua_file %>";
 <% end -%>
+<% if @absolute_redirect -%>
+  absolute_redirect <%= @absolute_redirect %>;
+<% end -%>
 <% if @access_log.is_a?(Array) -%>
   <%- @access_log.each do |log_item| -%>
   access_log            <%= log_item %> <%= @format_log %>;
