added static gzip support

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -110,6 +110,9 @@ http {
   etag <%= @etag %>;
 
 <% end -%>
+<% if @gzip_static == 'on' -%>
+  gzip_static       on;
+<% end -%>
 <% if @gzip == 'on' -%>
   gzip              on;
 <% if @gzip_buffers -%>
