added static gzip support

--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -88,6 +88,9 @@ server {
 <% if defined? @gzip_types -%>
   gzip_types <%= @gzip_types %>;
 <% end -%>
+<% if defined? @gzip_static -%>
+  gzip_static <%= @gzip_static %>;
+<% end -%>
 <%# make sure that allow comes before deny by forcing the allow key (if it -%>
 <%# exists) to be first in the output order.  The hash keys also need to be -%>
 <%# sorted so that the ordering is stable. -%>
