--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -125,6 +125,9 @@ http {
   etag <%= @etag %>;
 
 <% end -%>
+<% if @gzip_static -%>
+   gzip_static       <%= @gzip_static %>;
+<% end -%>
 <% if @gzip == 'on' -%>
   gzip              on;
 <% if @gzip_buffers -%>
