Add raw_ssl_append and raw_ssl_prepend

--- a/templates/server/server_ssl_footer.erb
+++ b/templates/server/server_ssl_footer.erb
@@ -36,4 +36,7 @@
 <% Array(@raw_append).each do |line| -%>
   <%= line %>
 <% end -%>
+<% Array(@raw_ssl_append).each do |line| -%>
+  <%= line %>
+<% end -%>
 }
