--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -152,6 +152,9 @@ server {
 <% if defined? @autoindex_localtime -%>
   autoindex_localtime <%= @autoindex_localtime %>;
 <% end -%>
+<% if @reset_timedout_connection -%>
+  reset_timedout_connection <%= @reset_timedout_connection %>;
+<% end -%>
 <% if defined? @log_by_lua -%>
   log_by_lua '<%= @log_by_lua %>';
 <% end -%>
