Remove legacy top-scope syntax

--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -42,7 +42,7 @@ server {
 <% elsif @access_log == 'off' -%>
   access_log            off;
 <% elsif not @access_log -%>
-  access_log            <%= scope['::nginx::config::log_dir'] %>/<%= @name_sanitized %>.access.log<% if @format_log %> <%= @format_log%><% end %>;
+  access_log            <%= scope['nginx::config::log_dir'] %>/<%= @name_sanitized %>.access.log<% if @format_log %> <%= @format_log%><% end %>;
 <% else -%>
   access_log            <%= @access_log %><% if @format_log %> <%= @format_log%><% end %>;
 <% end -%>
@@ -52,7 +52,7 @@ server {
   <%- end -%>
 <% elsif @error_log == 'absent' -%>
 <% elsif not @error_log -%>
-  error_log             <%= scope['::nginx::config::log_dir'] %>/<%= @name_sanitized %>.error.log;
+  error_log             <%= scope['nginx::config::log_dir'] %>/<%= @name_sanitized %>.error.log;
 <% else -%>
   error_log             <%= @error_log %>;
 <% end -%>
@@ -194,7 +194,7 @@ server {
 <% elsif @access_log == 'off' -%>
   access_log            off;
 <% elsif not @access_log -%>
-  access_log            <%= scope['::nginx::config::log_dir'] %>/<%= @name_sanitized %>.access.log<% if @format_log %> <%= @format_log%><% end %>;
+  access_log            <%= scope['nginx::config::log_dir'] %>/<%= @name_sanitized %>.access.log<% if @format_log %> <%= @format_log%><% end %>;
 <% else -%>
   access_log            <%= @access_log %><% if @format_log %> <%= @format_log%><% end %>;
 <% end -%>
@@ -204,7 +204,7 @@ server {
   <%- end -%>
 <% elsif @error_log == 'absent' -%>
 <% elsif not @error_log -%>
-  error_log             <%= scope['::nginx::config::log_dir'] %>/<%= @name_sanitized %>.error.log;
+  error_log             <%= scope['nginx::config::log_dir'] %>/<%= @name_sanitized %>.error.log;
 <% else -%>
   error_log             <%= @error_log %>;
 <% end -%>
